syntax = "proto3";

package users.v1;

service UsersService {
    rpc updateUser(UpdateUserRequest) returns (UserResponse) {}
    rpc findUser(FindUserRequest) returns (UserResponse) {}
    rpc findAllUsers(Empty) returns (UsersResponse) {}
}

message Empty {}

enum Role {
    BUYER = 0;
    ADMIN = 1;
    MODERATOR = 2;
    SELLER = 3;
}

message UserResponse {
    string id = 1;
    string username = 2;
    string email = 3;
    string createdAt = 4;
    string updatedAt = 5;
    string role = 6;
 }

 message UsersResponse {
    repeated UserResponse users = 1;
}

message UpdateUserRequest {
    string userId = 1;
    optional string username = 2;
    optional Role role = 3;
}

message FindUserRequest {
    string userId = 1;
}